# ttc-security-attacks

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
configs/: attack_config.yaml  benchmark_config.yaml  model_config.yaml
data/datasets/: .gitkeep
docs/: ATTACKS.md  BENCHMARK.md  GITHUB_SETUP_GUIDE.md  INSTALLATION.md
notebooks/: 01_nlba_demo.ipynb  02_smva_demo.ipynb  03_mvna_demo.ipynb  04_benchmark_analysis.ipynb
scripts/: download_models.py  run_benchmark.py  run_mvna.py  run_nlba.py  run_smva.py
src/: __init__.py
src/attacks/: __init__.py  base_attack.py  mvna.py  nlba.py  smva.py
src/defenses/: __init__.py  cra_defense.py  prime_defense.py  pure_defense.py
src/evaluation/: __init__.py  metrics.py  ttc_sec_benchmark.py  visualization.py
src/utils/: __init__.py  math_extractor.py  mcts_utils.py  prm_loader.py  sampling.py
tests/: test_metrics.py  test_mvna.py  test_nlba.py  test_smva.py
