[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttc-security-attacks"
version = "0.1.0"
description = "Mechanistic Attacks on Test-Time Compute in Reasoning LLMs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "H M Shujaat Zaheer", email = "shujabis@gmail.com"}
]
keywords = [
    "machine-learning",
    "security",
    "adversarial-attacks",
    "llm",
    "reasoning",
    "process-reward-models",
    "mcts"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
]
full = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "accelerate>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/hmshujaatzaheer/ttc-security-attacks"
Documentation = "https://github.com/hmshujaatzaheer/ttc-security-attacks#readme"
Repository = "https://github.com/hmshujaatzaheer/ttc-security-attacks.git"
Issues = "https://github.com/hmshujaatzaheer/ttc-security-attacks/issues"

[project.scripts]
ttc-attack = "scripts.run_benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
