[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttc-security-attacks"
version = "0.1.0"
description = "Mechanistic Attacks on Test-Time Compute in Reasoning LLMs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "H M Shujaat Zaheer", email = "shujabis@gmail.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["llm", "security", "adversarial", "reasoning", "test-time-compute"]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.22.0",
]
all = [
    "ttc-security-attacks[dev,viz,notebooks]",
]

[project.urls]
Homepage = "https://github.com/hmshujaatzaheer/ttc-security-attacks"
Repository = "https://github.com/hmshujaatzaheer/ttc-security-attacks.git"
Issues = "https://github.com/hmshujaatzaheer/ttc-security-attacks/issues"

[project.scripts]
ttc-nlba = "scripts.run_nlba:main"
ttc-smva = "scripts.run_smva:main"
ttc-mvna = "scripts.run_mvna:main"
ttc-benchmark = "scripts.run_benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
